**************
NRPE Changelog
**************


1.7 - ??/??/2003
----------------
- Updated spec file
- Bug fix with default nrpe port definition


1.6 - 12/30/2002
----------------
- Updated sample commands to match new plugin argument format
- Added sample init scripts for FreeBSD and Debian (Andrew Ryder)
- Syntax changes (-H option specifies host name in check_nrpe, 
  -c option specifies config file in nrpe)
- Added command_timeout directive to config file to allow user
  to specify timeout for executing plugins
- Added spec file and misc patches for building RPMs (James Peterson)
- Added --with-nrpe-port config directive (James Peterson)


1.5 - 06/03/2002
----------------
- Added setuid/setgid option to config file (suggested by Marek Cervenka) 


1.4 - 06/01/2002
----------------
- Changed STATE_UNKNOWN to value of 3 instead of -1 (old style)
- Minor doc and sample config file changes


1.3 - 02/21/2002
----------------
- Name and version change
- Ignore SIGHUP, minor cleanup (Jon Andrews)


1.2.5 - 12/22/2001
------------------
- Implemented Beej's sendall() to handle partial send()s
- Added instructions on running under xinetd to README
- Removed some old crud


1.2.4 - 02/22/2001
------------------
- I forgot what changes I made.  Go figure...


1.2.3 - 12/21/2000
------------------
- A bit more documentation on configuring command definitions for the plugin


1.2.2 - 06/05/2000
------------------
- Fixed error in docs for running under inetd using TCP wrappers
- Replaced old email address in src/netutils.h with new one


1.2.1 - 05/07/2000
------------------
- Removed trapping of SIGCHLD
- Changed wait4() to waitpid() to allow compilation on HP-UX and AIX


1.2.0 - 04/18/2000
------------------
- Server forks twice after accepting a client connection, so as to prevent the
  creation of zombies


1.1.5 - 04/07/2000
------------------
- Fixed a small bug where one debug message was not getting logged properly


1.1.4 - 03/30/2000
------------------