@@ -11,7 +11,7 @@ AC_PREFIX_DEFAULT(/usr/local/nagios)
 PKG_NAME=nrpe
 PKG_VERSION="1.7"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="01-06-2003"
+PKG_REL_DATE="01-07-2003"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
@@ -66,7 +66,10 @@ AC_PATH_PROG(PERL,perl)
 AC_OUTPUT(Makefile src/Makefile subst)
 
 perl subst nrpe.cfg
-
+perl subst init-script
+perl subst init-script.debian
+perl subst init-script.freebsd
+perl subst nrpe.xinetd
 
 
 dnl Review options
