@@ -4,14 +4,14 @@
 # Contributed by Andrew Ryder 06-22-02
 # Slight mods by Ethan Galstad 07-09-02
 
-NrpeBin=/usr/sbin/nrpe
-NrpeCfg=/etc/nrpe.cfg
+NrpeBin=@bindir@/nrpe
+NrpeCfg=@sysconfdir@/nrpe.cfg
 
 test -f $NrpeBin || exit 0
 
 case "$1" in
 start)	echo -n "Starting nagios remote plugin daemon: nrpe"
-        start-stop-daemon --start --quiet --exec $NrpeBin -- -d $NrpeCfg
+        start-stop-daemon --start --quiet --exec $NrpeBin -c $NrpeCfg -d
         echo "." 
 	;;
 stop)	echo -n "Stopping nagios remote plugin daemon: nrpe"
