@@ -1,0 +1,15 @@
+# default: on
+# description: NRPE (Nagios Remote Plugin Executor)
+service nsca
+{
+       	flags           = REUSE
+        socket_type     = stream        
+       	wait            = no
+        user            = @nrpe_user@
+	group		= @nrpe_grp@
+       	server          = @bindir@/nrpe
+        server_args     = -c @sysconfdir@/nrpe.cfg --inetd
+       	log_on_failure  += USERID
+        disable         = no
+	only_from       = 127.0.0.1
+}
